--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {	
 	"author": "Senith Vijayantha",
 	"description": "A project that does something awesome",
+	"keywords": ["freecodecamp", "backend-development", "course"],
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
