--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"author": "Senith Vijayantha",
 	"description": "A project that does something awesome",
 	"keywords": ["freecodecamp", "backend-development", "course"],
+	"license": "MIT",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
